--- a/package.json
+++ b/package.json
@@ -27,15 +27,19 @@
 		"expo-status-bar": "~1.12.1",
 		"expo-system-ui": "~3.0.4",
 		"expo-web-browser": "~13.0.3",
+		"moment": "^2.30.1",
 		"nativewind": "^2.0.11",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-native": "0.74.1",
+		"react-native-date-picker": "^5.0.3",
+		"react-native-element-dropdown": "^2.12.0",
 		"react-native-gesture-handler": "~2.16.1",
 		"react-native-maps": "^1.14.0",
 		"react-native-reanimated": "~3.10.1",
 		"react-native-safe-area-context": "4.10.1",
 		"react-native-screens": "3.31.1",
+		"react-native-select-dropdown": "^4.0.1",
 		"react-native-svg": "^15.2.0",
 		"react-native-svg-transformer": "^1.4.0",
 		"react-native-web": "~0.19.10"
