--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
 		"react-native-select-dropdown": "^4.0.1",
 		"react-native-svg": "^15.2.0",
 		"react-native-svg-transformer": "^1.4.0",
-		"react-native-web": "~0.19.10"
+		"react-native-web": "~0.19.10",
+		"socket.io-client": "^4.7.5"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.20.0",
