--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.8",
     "expo-constants": "~16.0.1",
@@ -44,8 +46,7 @@
     "react-native-svg": "^15.2.0",
     "react-native-svg-transformer": "^1.4.0",
     "react-native-web": "~0.19.10",
-    "socket.io-client": "^4.7.5",
-    "@react-native-community/datetimepicker": "8.0.1"
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
