--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "react-native-svg": "^15.2.0",
     "react-native-svg-transformer": "^1.4.0",
     "react-native-web": "~0.19.10",
-    "socket.io-client": "^4.7.5"
+    "react-toastify": "^10.0.5",
+    "socket.io-client": "^4.7.5",
+    "toastify-react-native": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
